完成酒店服务设施维护模块，登录接口联调 订单统计 订单详情 前端部分 信息维护后端部分，待完成

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <repositories>
     <repository>
       <id>Nexus</id>
-      <url>http://192.168.4.17:8082/nexus/content/repositories/thirdparty/</url>
+      <url>http://192.168.4.17:8082/nexus/content/groups/public/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -95,6 +95,12 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.36</version>
+    </dependency>
+    <!-- oracle 驱动包-->
+    <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc14</artifactId>
+      <version>10.2.0.4.0</version>
     </dependency>
     <!-- standard -->
     <dependency>
