--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <repositories>
     <repository>
       <id>Nexus</id>
-      <url>http://192.168.4.17:8082/nexus/content/groups/public/</url>
+      <url>http://192.168.4.17:8082/nexus/content[i]/groups/public/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
