公众号向指定用户发送模板信息接口未完成 发送post请求成功，获取到微信发消息接口返回的错误信息 get请求待研究

--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
   <version>1.0-SNAPSHOT</version>
   <name>booking Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <!-- 公司maven库 -->
-  <repositories>
-    <repository>
-      <id>Nexus</id>
-      <url>http://192.168.4.17:8082/nexus/content[i]/groups/public/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+  <!--&lt;!&ndash; 公司maven库 &ndash;&gt;-->
+  <!--<repositories>-->
+    <!--<repository>-->
+      <!--<id>Nexus</id>-->
+      <!--<url>http://192.168.4.17:8082/nexus/content[i]/groups/public/</url>-->
+      <!--<releases>-->
+        <!--<enabled>true</enabled>-->
+      <!--</releases>-->
+      <!--<snapshots>-->
+        <!--<enabled>false</enabled>-->
+      <!--</snapshots>-->
+    <!--</repository>-->
+  <!--</repositories>-->
 
   <dependencies>
     <dependency>
