--- a/src/main/resources/weChat.properties
+++ b/src/main/resources/weChat.properties
@@ -1,2 +1,6 @@
 weChat.appId = wx50c2ff2ef1979402
 weChat.secret = c6bcf9884e29799f2913c903deb16ede
+weChat.templateId.order = fz01Ckdkjd-uduwYj5HkmLk-NXlTOrTu9ieU_n2pj-g
+weChat.templateId.in = 7MEfAhApmivMaXvPoH99rz0vpfwGEpYL2uyFqddryp0
+weChat.templateId.out = yAumrSw7Y9yDOUhXwuE8CxXI7WUb3gmMVeJqri6xB_M
+weChat.topColor = #4B0082
