--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>booking Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <!--&lt;!&ndash; 公司maven库 &ndash;&gt;-->
+  <!-- 公司maven库 -->
   <!--<repositories>-->
     <!--<repository>-->
       <!--<id>Nexus</id>-->
