--- a/src/main/resources/weChat.properties
+++ b/src/main/resources/weChat.properties
@@ -1,6 +1,6 @@
-weChat.appId = wx50c2ff2ef1979402
-weChat.secret = c6bcf9884e29799f2913c903deb16ede
-weChat.templateId.order = jkCp2t7zCnlNe2Pvr5RYwIlxp0mRq-B9JRv8lzbOHBU
+weChat.appId = wx0e9eff542643ecef
+weChat.secret = c19701890c0d02ffed31cb05266351a7
+weChat.templateId.order = D4Y7DskyyDjmvkBa8iGG91ldG5-PMNi8MZxYWDdYQVI
 weChat.templateId.checkIn = 7MEfAhApmivMaXvPoH99rz0vpfwGEpYL2uyFqddryp0
 weChat.templateId.checkOut = 8XmlIZTMH1wleGKsa42N98OJMzigjQZhbp4RP06JqVY
 weChat.topColor = #4B0082
